add filesystem viewer

--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -7,14 +7,18 @@
     <x>0</x>
     <y>0</y>
     <width>943</width>
-    <height>678</height>
+    <height>710</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>FSTreeInfo</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout"/>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QTreeView" name="fsTreeView"/>
+    </item>
+   </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
