--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -6,17 +6,24 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>943</width>
+    <width>999</width>
     <height>735</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>FSTreeInfo</string>
+   <string notr="true">FSTreeInfo</string>
+  </property>
+  <property name="locale">
+   <locale language="English" country="UnitedStates"/>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <widget class="QTreeView" name="fsTreeView"/>
+     <widget class="QTreeView" name="fsTreeView">
+      <attribute name="headerCascadingSectionResizes">
+       <bool>false</bool>
+      </attribute>
+     </widget>
     </item>
     <item>
      <widget class="QGroupBox" name="dirInfoBox">
@@ -38,6 +45,9 @@
          <property name="sortingEnabled">
           <bool>false</bool>
          </property>
+         <attribute name="horizontalHeaderDefaultSectionSize">
+          <number>200</number>
+         </attribute>
          <attribute name="horizontalHeaderStretchLastSection">
           <bool>true</bool>
          </attribute>
@@ -56,7 +66,7 @@
           <item row="0" column="1">
            <widget class="QLabel" name="subdirsCountLabel">
             <property name="text">
-             <string>0</string>
+             <string notr="true">0</string>
             </property>
            </widget>
           </item>
@@ -73,7 +83,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>943</width>
+     <width>999</width>
      <height>25</height>
     </rect>
    </property>
